# footdrop

./: README.md  footdrop.ipynb  pyproject.toml
animations/FES/: Man Walk.json  Man Walking On Treadmill.json  TENS devices.json
animations/Flexibility/: Aged woman doing calf raises exercise.json  Leg Pull Low Plank.json  Man Doing Calf Raise Exercise for Legs.json  Man Rolling Calf Exercise For Leg Relaxed.json  Plank Lunges Exercise.json  Side Right Leg Raises Exercise.json  Woman Doing Dumbbell Standing Single Leg Deficit Calf Raise Exercise for Calves.json
animations/strength/: Ankle Brace (1).json  Ankle Brace (2).json  Man Doing Lever Seated Leg Curl Exercise For Legs.json  Man Doing Resistance Band Calf Raise Exercise For Leg.json  Man Doing Resistance Band Mountain Climber Exercise Men.json  Man Doing Seated Dumbbell Calf Raise Exercise For Calves.json  Woman Doing Dumbbell Bench Lying Leg Curl Exercise for Legs.json  Woman Doing Dumbbell Right Leg Forward Lunge Exercise for Legs.json  Woman Doing Resistance Band Standing Leg Curl Exercise for Legs.json
model_artifact/: LightGBM.pkl  logistic_regression.pkl  random_forest.pkl
src/: app.py  config.py  paths.py  train.py  utils.py
